Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <title>Document Structure Lab</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
     
